fixed text overflow in tweet content

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -36,6 +36,7 @@ article.tweet .profile {
 article.tweet .content {
   font-weight: 600;
   padding: 0.5em;
+  word-wrap: break-word;
 }
 
 article.tweet footer {
